GPUV-1 Campo de correo electrónico añadido.

--- a/app/src/main/res/layout/fragment_agregar_usuarios.xml
+++ b/app/src/main/res/layout/fragment_agregar_usuarios.xml
@@ -49,7 +49,7 @@
                     layout="@layout/toolbar"/>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingHorizontal="27dp"
@@ -103,8 +103,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextNombre"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/inserte_su_nombre"
                         android:text="@={user.nombre}"
                         android:textColorHint="@color/secondary" />
@@ -118,8 +118,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextApellido"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/inserte_su_apellido"
                         android:text="@={user.apellido}"
                         android:textColorHint="@color/secondary" />
@@ -132,7 +132,7 @@
                         android:textSize="16sp" />
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="350dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp">
 
@@ -156,8 +156,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextId"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/digite_su_n_mero_de_id"
                         android:inputType="number"
                         android:text="@={user.id}"
@@ -173,8 +173,8 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/selectPrioridad"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="350dp"
-                        android:layout_height="60dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
                         app:hintTextColor="@color/azulPrincipal">
@@ -199,8 +199,8 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/selectSexo"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="350dp"
-                        android:layout_height="60dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
                         app:hintTextColor="@color/azulPrincipal">
@@ -225,8 +225,8 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/selectEstadoCivil"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="350dp"
-                        android:layout_height="60dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
                         app:hintTextColor="@color/azulPrincipal">
@@ -250,11 +250,28 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextCelular"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/digite_su_n_mero_de_celular"
                         android:inputType="number"
+                        android:maxLength="10"
                         android:text="@={user.celular}"
+                        android:textColorHint="@color/secondary" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/txtEmail"
+                        android:textSize="16sp" />
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/txtEditEmail"
+                        android:inputType="textEmailAddress"
+                        android:text="@={user.correo"
                         android:textColorHint="@color/secondary" />
 
                     <TextView
@@ -266,8 +283,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextDireccion"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/inserte_su_direcci_n"
                         android:text="@={user.direccion}"
                         android:textColorHint="@color/secondary" />
@@ -281,8 +298,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextEps"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/inserte_su_eps"
                         android:text="@={user.eps}"
                         android:textColorHint="@color/secondary" />
@@ -334,8 +351,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextNombreContacto"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/inserte_el_nombre_del_contacto"
                         android:text="@={user.nombreContacto}"
                         android:textColorHint="@color/secondary" />
@@ -349,8 +366,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextCelularContacto"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/digite_el_celular_de_su_contacto"
                         android:inputType="number"
                         android:text="@={user.celularContacto}"
@@ -365,8 +382,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextParentescoContacto"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/parentesco_con_su_contacto"
                         android:text="@={user.parentescoContacto}"
                         android:textColorHint="@color/secondary" />
@@ -380,8 +397,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextDireccionContacto"
-                        android:layout_width="350dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="@string/direcci_n_de_su_contacto"
                         android:text="@={user.direccionContacto}"
                         android:textColorHint="@color/secondary" />
@@ -550,8 +567,8 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/selectRole"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="350dp"
-                        android:layout_height="60dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textColorHint="@color/secondary"
                         android:visibility="gone"
                         app:boxStrokeColor="@color/azulPrincipal"
@@ -568,7 +585,7 @@
 
                 <Button
                     android:id="@+id/buttonEnviar"
-                    android:layout_width="320dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
