GPUV-1 Corrección de error.

--- a/app/src/main/res/layout/fragment_visualizar_usuario.xml
+++ b/app/src/main/res/layout/fragment_visualizar_usuario.xml
@@ -216,7 +216,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -228,7 +228,7 @@
                                 android:textStyle="bold"/>
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@{user.correo}"
                                 tools:text="correo@gmail.com"
